<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameActivity">


    <ImageButton android:layout_width="@dimen/game_button_size"
                 android:layout_height="@dimen/game_button_size"
                 android:id="@+id/pauseButton"
                 app:srcCompat="@drawable/ic_menu"
                 android:scaleType="fitXY"
                 android:background="@drawable/button_rounded_corners"
                 android:padding="@dimen/default_padding"
                 android:layout_margin="@dimen/default_margin"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:elevation="10dp"
    />



    <ImageView android:layout_width="@dimen/current_tile_view_size"
               android:layout_height="@dimen/current_tile_view_size"
               android:id="@+id/currentTileView"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               android:layout_margin="@dimen/default_margin"
               android:elevation="10dp"
               android:background="@drawable/rounded_corners"
               android:padding="@dimen/small_padding"
    />




    <carcassonne.se.carcassonnecustomclone.zoom.ZoomLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent"
                                                           android:id="@+id/zoomLayout"
                                                           app:overScrollHorizontal="false"
                                                           app:overScrollVertical="false"
                                                           app:overPinchable="false"
                                                           app:horizontalPanEnabled="true"
                                                           app:verticalPanEnabled="true"
                                                           app:zoomEnabled="true"
                                                           app:minZoom="10.0"
                                                           app:minZoomType="zoom"
                                                           app:maxZoom="100.0"
                                                           app:maxZoomType="zoom"
                                                           app:hasClickableChildren="false"
    />




    <Button android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:textSize="@dimen/small_text_size"
            android:fontFamily="@font/aclonica"
            android:id="@+id/remainingTiles"
            android:background="@drawable/button_rounded_corners"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintRight_toLeftOf="@id/currentTileView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="10dp"
    />


    <LinearLayout android:layout_width="wrap_content"
                  android:layout_height="0dp"
                  android:id="@+id/playerInfoArea"
                  android:orientation="vertical"
                  android:elevation="10dp"
    />


    <ImageButton android:layout_width="@dimen/current_tile_view_size"
                 android:layout_height="@dimen/current_tile_view_size"
                 android:id="@+id/okButton"
                 app:srcCompat="@drawable/ic_ok"
                 android:scaleType="fitXY"
                 android:background="@drawable/button_rounded_corners_green"
                 android:padding="@dimen/default_padding"
                 android:layout_margin="@dimen/default_margin"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:elevation="10dp"

    />

    <ImageButton android:layout_width="@dimen/game_button_size"
                 android:layout_height="@dimen/game_button_size"
                 app:srcCompat = "@drawable/ic_close"
                 android:scaleType="fitXY"
                 android:id="@+id/declineButton"
                 android:background="@drawable/button_rounded_corners_red"
                 android:layout_margin="@dimen/default_margin"
                 android:elevation="10dp"
                 android:padding="@dimen/default_padding"
                 app:layout_constraintBottom_toTopOf="@id/okButton"
                 app:layout_constraintRight_toRightOf="parent"
    />


</android.support.constraint.ConstraintLayout>