...
              app:layout_constraintLeft_toLeftOf="parent"
              app:layout_constraintRight_toRightOf="parent"
    />

    <Button style="@style/MenuButtonStyle"
            android:text="@string/no"
            android:id="@+id/noButton"
            app:layout_constraintTop_toBottomOf="@id/questionText"
            app:layout_constraintLeft_toLeftOf="parent"
    />

    <Button style="@style/MenuButtonStyle"
            android:text="@string/yes"
            android:id="@+id/yesButton"
            app:layout_constraintTop_toBottomOf="@id/questionText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/noButton"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginStart="@dimen/dialog_button_margin"
    />
...
